# present-iq

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 155c73a576c4_add_slides_table.py  3ee8349b6efa_add_analyses_table.py  49498646bb28_add_framework_detection_fields.py  aa2fa86cb415_add_auth_tables.py  c2b99b39df2b_add_reasoning_audit_fields_to_analyses.py  cfe93267a138_add_reports_table.py  db2137eabff8_add_slide_classification_fields.py  ed7b65d65f73_add_contextual_evaluation_fields_to_.py  fafc8beb9035_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: analysis.py  auth.py  health.py  presentations.py  reports.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: session.py
backend/app/schemas/: analysis.py  auth.py  presentation.py  report.py  slide.py
backend/app/services/: file_validation.py  storage.py
backend/app/services/analysis/: contextual.py  llm_feedback.py  pipeline.py  prompt_parser.py  reasoner.py  scorer.py
backend/app/services/parsing/: common.py  loader.py  ocr.py  pdf_parser.py  ppt_converter.py  pptx_parser.py
backend/app/services/processing/: classifier.py  embeddings.py  framework_catalog.py  framework_detector.py  pipeline.py  queue.py
backend/app/services/reporting/: pdf_builder.py  report_service.py
backend/app/utils/: text_cleaning.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: package-lock.json
(+12 files in other folders)
