[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presentiq-backend"
version = "0.1.0"
description = "PresentIQ backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "SQLAlchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.9.0",
    "bcrypt>=3.2.0",
    "python-jose>=3.3.0",
    "redis>=4.5.0",
    "celery>=5.3.0",
    "httpx>=0.27.0",
    "reportlab>=4.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]